; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/examples/extr_boing.c_cursor_position_callback.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/examples/extr_boing.c_cursor_position_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cursor_x = common dso_local global float 0.000000e+00, align 4
@cursor_y = common dso_local global float 0.000000e+00, align 4
@override_pos = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cursor_position_callback(i32* %0, double %1, double %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  store i32* %0, i32** %4, align 8
  store double %1, double* %5, align 8
  store double %2, double* %6, align 8
  %7 = load double, double* %5, align 8
  %8 = fptrunc double %7 to float
  store float %8, float* @cursor_x, align 4
  %9 = load double, double* %6, align 8
  %10 = fptrunc double %9 to float
  store float %10, float* @cursor_y, align 4
  %11 = load i64, i64* @override_pos, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load float, float* @cursor_x, align 4
  %15 = load float, float* @cursor_y, align 4
  %16 = call i32 @set_ball_pos(float %14, float %15)
  br label %17

17:                                               ; preds = %13, %3
  ret void
}

declare dso_local i32 @set_ball_pos(float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
